--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
         </dependency>
+		<!--redis使用jar  -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
     </dependencies>
 	<build>
 		<resources>
